Cambios main.css

--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -14,11 +14,9 @@
     <%- include('partials/navigation') %>
         <main class="container vh-100 pt-2 text-center d-flex justify-content-center align-items-center">
             <section>
-                <h1 class="display-1 d-flex justify-content-center">About</h1>
+                <h1 class="display-1 d-flex justify-content-center">Drogas: Qué debes saber</h1>
                 <p class="d-flex justify-content-center">
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem provident fugiat corporis, amet,
-                    perferendis nam molestiae aut ad, nesciunt incidunt necessitatibus ullam tempore quasi molestias
-                    voluptatem odit facilis pariatur. Eveniet?
+                    No es difícil encontrar drogas y a veces puede parecer como si todo el mundo las fabricara o quisiera que las probaras. Pero, como ocurre con todo lo que parece demasiado bueno para ser verdad, hay desventajas (y peligros) asociados al consumo de drogas.
                 </p>
             </section>
         </main>
