--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -15,9 +15,9 @@
 
         <header class="container vh-100 d-flex justify-content-center align-items-center">
             <div class="d-flex flex-column justify-content-center align-items-center">
-                <img src="/img/drogas.png" alt="logo" class="img-fluid">
-                <h1 class="display-1 my-5 text-uppercase fw-bold">Prevencion De Drogas</h1>
-                <a href="/about" class="btn btn-primary w-25">About</a>
+                <img src="/img/drogas2.png" alt="logo" class="img-fluid">
+                <h1 class="display-1 my-5 text-uppercase fw-bold">Drug Preventions</h1>
+                <a href="/about" class="btn btn-primary w-25">Read More...</a>
             </div>
 
         </header>
