cambio en about con insercion de nueva imagen

--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -15,6 +15,7 @@
         <main class="container vh-100 pt-2 text-center d-flex justify-content-center align-items-center">
             <section>
                 <h1 class="display-1 d-flex justify-content-center">Drogas: Qué debes saber</h1>
+                <img src="https://equilibrium-psicologia.com/wp-content/uploads/2021/11/ADICCIONES.jpeg" alt="drogas">
                 <p class="d-flex justify-content-center">
                     No es difícil encontrar drogas y a veces puede parecer como si todo el mundo las fabricara o quisiera que las probaras. Pero, como ocurre con todo lo que parece demasiado bueno para ser verdad, hay desventajas (y peligros) asociados al consumo de drogas.
                 </p>
