--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -14,10 +14,16 @@
     <%- include('partials/navigation') %>
         <main class="container vh-100 pt-2 text-center d-flex justify-content-center align-items-center">
             <section>
-                <h1 class="display-1 d-flex justify-content-center">Drogas: Qué debes saber</h1>
-                <img src="https://equilibrium-psicologia.com/wp-content/uploads/2021/11/ADICCIONES.jpeg" alt="drogas">
+                <h1 class="display-1 d-flex justify-content-center">Drogas</h1>
+                <h3 class="display-3 d-flex justify-content-center">Que es lo que debes saber...</h3>
+                <img src="https://equilibrium-psicologia.com/wp-content/uploads/2021/11/ADICCIONES.jpeg" alt="drogas" width="200px">
                 <p class="d-flex justify-content-center">
                     No es difícil encontrar drogas y a veces puede parecer como si todo el mundo las fabricara o quisiera que las probaras. Pero, como ocurre con todo lo que parece demasiado bueno para ser verdad, hay desventajas (y peligros) asociados al consumo de drogas.
+                </p>
+                <h3 class="display-3 d-flex justify-content-center">¿Cómo actúan las drogas?</h3>
+                <img src="https://oprenar.files.wordpress.com/2019/10/ciencia.jpg?w=286&h=214" alt="drogas" width="200px">>
+                <p class="d-flex justify-content-center">
+                    Las drogas son sustancias químicas que modifican el funcionamiento de nuestro cuerpo,Cuando se toman (generalmente tragándolas, inhalándolas o inyectándoselas), las drogas encuentran la forma de llegar al torrente sanguíneo. Desde allí, llegan al cerebro y a otras partes del cuerpo.
                 </p>
             </section>
         </main>
