Cambios en el inicio

--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,8 +1,12 @@
 <footer>
-   <strong><h1>Introduccion</h1></strong>
+    <strong>
+        <h1>Introduccion</h1>
+    </strong>
     <h5>¿Que son las drogas?</h5>
     <p3>Las drogas son sustancias químicas que pueden cambiar el funcionamiento de su cuerpo y mente. Incluyen
         medicamentos recetados, medicamentos de venta libre, alcohol, tabaco y drogas ilegales.</p3>
+        <h5>¿Que es el consumo de drogas?</h5>
+
 
 
 </footer>
