--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -1,5 +1,8 @@
 body {
-    background: linear-gradient( rgba(241, 213, 213, 0.8), rgba(207, 206, 206, 0.8)),url(https://st2.depositphotos.com/31324280/43336/i/450/depositphotos_433367202-stock-photo-word-drugs-on-white-isolated.jpg);
+    background: linear-gradient( rgba(171, 199, 195, 0.8), rgba(207, 206, 206, 0.8)),url(https://st2.depositphotos.com/31324280/43336/i/450/depositphotos_433367202-stock-photo-word-drugs-on-white-isolated.jpg);
+    margin: top 10px; 
+    padding: 0;
+
     /* Cambiar el color del texto en general */
 
     color: #4b41df; /* Cambia "blue" al color que desees */
@@ -17,4 +20,93 @@ p {
     border-radius: 300px;
     box-shadow: 1px 0px 30px rgba(236, 241, 133, 0.5);
 
-  }          
+  }
+       
+  
+
+
+  /*contact */
+
+body {
+    font-family: Arial, sans-serif;
+}
+
+
+.main-contact {
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 40px 20px;
+}
+
+/* Header styles */
+.contact-hero-section {
+    background-color: #bdb59f;
+    color: #33a8f7;
+    padding: 40px 0;
+    text-align: center;
+    border-radius: 500px;
+}
+
+.contact-hero-effect {
+    background-color: rgba(213, 216, 219, 0.8);
+    padding: 30px;
+    border-radius: 450px;
+}
+
+.contact-hero-section h1 {
+    font-size: 36px;
+    margin-bottom: 10px;
+}
+
+.contact-hero-section p {
+    font-size: 18px;
+    margin-bottom: 20px;
+}
+
+/* Form styles */
+.contact-form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 40px;
+}
+
+.form-left {
+    background-color: #b49c9c;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+label {
+    font-size: 14px;
+    margin-bottom: 5px;
+    display: block;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 15px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+textarea {
+    resize: vertical;
+}
+
+button[type="submit"] {
+    background-color: #0a55a5;
+    color: #63cfeb;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+button[type="submit"]:hover {
+    background-color: #f0eccc;
+}
