--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -12,7 +12,7 @@
 
 <body>
     <%- include('partials/navigation') %>
-        <main class="container vh-100 pt-2 text-center d-flex justify-content-center align-items-center">
+        <main class="container pt-2 text-center d-flex justify-content-center align-items-center">
             <section>
                 <h3 class="display-3 d-flex justify-content-center">Drogas</h3>
                 <h6 class="display-6 d-flex justify-content-center">Que es lo que debes saber...</h6>
