--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -7,13 +7,16 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">Inicio</a>
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/about">Information</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="/contact">Contact</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/service">Service</a>
           </li>
         </ul>
       </div>
