modificacion de pagina index.ejs

--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -30,6 +30,7 @@
                 <p class="d-flex justify-content-center">
                     Si crees que tú, o un amigo tuyo, pueden ser adictos a las drogas, habla con uno de tus padres, tu médico, tu orientador escolar o el personal de la enfermería de tu centro de estudios. Ellos te pueden ayudar a recibir la ayuda que necesitas.
                 </p>
+                <a href="/service" class="btn btn-primary w-25">Read More...</a>
             </section>
         </main>
 </body>
