--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -28,23 +28,24 @@
                     <label for="name">
                         Primer Nombre
                     </label>
-                    <input type="text" name="Nombre" id="name" placeholder="¡Escribe tu nombre aquí!">
+                    <input type="text" name="Nombre" id="name" placeholder="">
                     <label for="apellido">
                         Primer Apellido
                     </label>
-                    <input type="text" name="apellido" id="apellido" placeholder="¡Escribe tu apellido aquí!">
+                    <input type="text" name="apellido" id="apellido" placeholder="">
                     <label for="email">
                         Email
                     </label>
-                    <input type="email" name="Email" id="email" placeholder="¡Escribe tu Email aquí!">
+                    <input type="email" name="Email" id="email" placeholder="">
                     <label for="mensaje">Mensaje</label>
                     <textarea name="Mensaje" id="mensaje cols=" 200 rows="7"
                         placeholder="Aquí puedes escribir tu mensaje, queja o petición">
                     </textarea>`
                     <button type="submit">Enviar</button>
                 </div>
-            </form>
+                           </form>
         </main>
+        <a href="/" class="btn btn-primary w-25 container vh-500 d-flex justify-content-center align-items-center">Read More...</a> 
     <%- include ('partials/footer') %> 
 </body>
 </html>
