--- a/src/views/service.ejs
+++ b/src/views/service.ejs
@@ -60,6 +60,7 @@
                     Atentamente,
                     El Equipo de Preventios Drugs
                 </p>
+                <a href="/contact" class="btn btn-primary w-25">Read More...</a>
             </section>
         </main>
 </body>
