--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -99,7 +99,7 @@ textarea {
 button[type="submit"] {
     background-color: #0a55a5;
     color: #63cfeb;
-    padding: 10px 20px;
+    padding: 10px 30px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -120,4 +120,8 @@ button[type="submit"]:hover {
 
 .main.section.p{
     font-weight: bold;
+}
+
+a {
+    padding: 10px 10px ;
 }
