--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,29 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <%- include('partials/head') %>
-        <title>
-            <%= title%>
-        </title>
-</head>
-
-<body>
-    <%- include('partials/navigation') %>
-
-        <header class="container vh-100 d-flex justify-content-center align-items-center">
-            <div class="d-flex flex-column justify-content-center align-items-center">
-                <img src="/img/drogas2.png" alt="logo" class="img-drogas">
-                <h1 class="display-1 my-5 text-uppercase fw-bold">Drug Preventions</h1>
-                <a href="/about" class="btn btn-primary w-25">Read More...</a>
-            </div>
-
-        </header>
-
-        <%- include('partials/footer') %>
-
-</body>
-
+    <link rel="stylesheet" href="/css/cover.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css">
+    <%- include ('partials/head') %>
+    <title>
+        <%= title%>
+    </title>
+  </head>
+  <body class="d-flex h-100 text-center text-bg-dark" style="background-image: url(/img/fondo.gif); background-repeat: repeat-x;">
+    <div class="cover-container d-flex w-100 vh-100 p-3 mx-auto flex-column">
+      <%- include ('partials/navigation') %>
+      <main class="px-3">
+        <!-- <img class="bd-placeholder-img" width="100%" src="/img/drogas2.png" alt="logo"> -->
+        <h1>Prevencion de Drogas.</h1>
+        <p class="lead">Las drogas son un abrazo mortal que roba vidas y desgarra familias. Elige el camino de la salud y la vida.</p>
+        <p class="lead">
+          <a href="/about" class="btn btn-lg btn-light fw-bold border-white bg-white">Conocer mas...</a>
+        </p>
+      </main>
+      <%- include ('partials/footer') %>
+    </div>
+    <script src="/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
