--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-<footer>
-    
+<footer class="mt-auto text-white-50">
+  <p>Desarrollado por el mejor grupo, by <a href="https://github.com/Crisfer111/Node_grupos" class="text-white" target="_blank">Grupo 6</a>.</p>
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
