--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -1,21 +1,12 @@
-<nav class="navbar navbar-expand-lg bg-dark navbar-dark">
-    <div class="container">
-      <a class="navbar-brand" href="/">AntiDrugs</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">Inicio</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/about">Information</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/contact">Contact</a>
-          </li>
-        </ul>
-      </div>
+  <header class="mb-auto">
+    <div>
+      <a class="text-white" href="/"><h3 class="float-md-start mb-0">AntiDrogas</h3></a>
+      <nav class="nav nav-masthead justify-content-center float-md-end">
+        <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="/">Inicio</a>
+        <a class="nav-link fw-bold py-1 px-0" href="/about">Information</a>
+        <a class="nav-link fw-bold py-1 px-0" href="/acerca">Acerca de</a>
+        <a class="nav-link fw-bold py-1 px-0" href="/nosotros">Nosotros</a>
+        <a class="nav-link fw-bold py-1 px-0" href="/contact">Contact</a>
+      </nav>
     </div>
-  </nav>
+  </header>
