arreglando el nav

--- a/src/views/partials/navigation.ejs
+++ b/src/views/partials/navigation.ejs
@@ -3,7 +3,7 @@
       <a class="text-white" href="/"><h3 class="float-md-start mb-0">AntiDrogas</h3></a>
       <nav class="nav nav-masthead justify-content-center float-md-end">
         <a class="nav-link fw-bold py-1 px-0 active" aria-current="page" href="/">Inicio</a>
-        <a class="nav-link fw-bold py-1 px-0" href="/about">Information</a>
+        <a class="nav-link fw-bold py-1 px-0" href="/about">Sobre</a>
         <a class="nav-link fw-bold py-1 px-0" href="/acerca">Acerca de</a>
         <a class="nav-link fw-bold py-1 px-0" href="/nosotros">Nosotros</a>
         <a class="nav-link fw-bold py-1 px-0" href="/service">Servicios</a>
