arreglando el contact

--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -26,7 +26,7 @@
                 <label class="text-dark" for="floatingInput">Correo electronico</label>
               </div>
               <div class="form-floating mb-3">
-                <input type="password" class="form-control rounded-3" id="floatingPassword" placeholder="Password">
+                <input type="text" class="form-control rounded-3" id="floatingPassword" placeholder="text">
                 <label class="text-dark" for="floatingPassword">mensaje</label>
               </div>
               <button class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit">Enviar</button>
